--- a/HWiNFOcpuNew/HWiNFOcpu.ini
+++ b/HWiNFOcpuNew/HWiNFOcpu.ini
@@ -3,10 +3,10 @@ Update=2000
 AccurateText=1
 OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
 ContextTitle=Display Sensors
-ContextAction=[!ActivateConfig "HWiNFO_New\ShowReg" "ShowReg.ini"]
+ContextAction=[!ActivateConfig "HWiNFOCPUNew\ShowReg" "ShowReg.ini"]
 
 [Metadata]
-Name=HWiNFOgpu
+Name=HWiNFOcpu
 Author=JSMorley
 Information=Description:|HWInfo Graphics card information | Current settings are for my NVIDIA GeForce RTX 2080-Ti 
 Version=December 7, 2021
@@ -24,15 +24,15 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 ; these Index numbers will change!
 
 ; Sensor Variables - You will certainly need to change these
-GPUName=1
-GPUTempDegreesCenter=2
-GPUTempDegreesEdge=1
-GPUFanSpeedRPM=3
-GPUCoreClockSpeedMHz=5
-GPUPowerW=4
-GPUCoreLoad=7
-GPUMemoryMB=8
-GPUMemoryClock=6
+CPUName=1
+CPUTempDegreesCenter=2
+CPUTempDegreesEdge=1
+CPUFanSpeedRPM=3
+CPUCoreClockSpeedMHz=5
+CPUPowerW=4
+CPUCoreLoad=7
+CPUMemoryMB=8
+CPUMemoryClock=6
 
 ; Font Variables
 TextFont=Dosis
@@ -51,13 +51,13 @@ G4=212, 13, 18,255
 
 
 ;Variable Size
-BackgroundH=300
+BackgroundH=330
 BackgroundW=250
 BarW=(#BackgroundW#-33)
 ValueX=(#BackgroundW#-15)
 
 ; Unit Symbol Variables
-Temperatures=°C
+Temperatures=C
 FanSpeeds=RPM
 Percents=%
 ClockSpeeds=MHz
@@ -74,7 +74,7 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color #BackgroundC
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=Sensor#GPUName#
+RegValue=Sensor#CPUName#
 UpdateDivider=-1
 RegExpSubstitute=1
 Substitute="^.*]:":"",":":""
@@ -83,7 +83,7 @@ Substitute="^.*]:":"",":":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUTempDegrees#
+RegValue=ValueRaw#CPUTempDegreesCenter#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
@@ -93,7 +93,7 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUTempDegreesEdge#
+RegValue=ValueRaw#CPUTempDegreesEdge#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
@@ -103,7 +103,7 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUFanSpeedRPM#
+RegValue=ValueRaw#CPUFanSpeedRPM#
 MinValue=0
 MaxValue=3500
 RegExpSubstitute=1
@@ -113,47 +113,47 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUCoreClockSpeedMHz#
+RegValue=ValueRaw#CPUCoreClockSpeedMHz#
 MinValue=0
 MaxValue=2700
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureGPUPowerW]
+[MeasureCPUPowerW]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUPowerW#
+RegValue=ValueRaw#CPUPowerW#
 MinValue=0
 MaxValue=230
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureGPUCoreLoad]
+[MeasureCPUCoreLoad]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUCoreLoad#
+RegValue=ValueRaw#CPUCoreLoad#
 MinValue=0
 MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureGPUMemoryClock]
+[MeasureCPUMemoryClock]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUMemoryClock#
+RegValue=ValueRaw#CPUMemoryClock#
 MinValue=0
 MaxValue=2250
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureGPUMemoryMB]
+[MeasureCPUMemoryMB]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#GPUMemoryMB#
+RegValue=ValueRaw#CPUMemoryMB#
 MinValue=0
 MaxValue=16000
 RegExpSubstitute=1
@@ -184,11 +184,12 @@ Meter=String
 MeasureName=MeasureCardName
 MeterStyle=MeterTextStyle
 FontColor=118,211,0,255
-FontSize=14
+FontSize=12
 FontWeight=900
 X=(#BackgroundW#/2)
 Y=10
 StringAlign=Center
+
 
 [MeterCoreLoadLabel]
 Meter=String
@@ -200,7 +201,7 @@ StringAlign=Left
 
 [MeterCoreLoad]
 Meter=String
-MeasureName=MeasureGPUCoreLoad
+MeasureName=MeasureCPUCoreLoad
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -212,8 +213,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
+Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
 DynamicVariables=1
 
 [MeterCoreClockSpeedLabel]
@@ -242,7 +243,7 @@ Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),2 | Fill LinearGr
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
-[MeterTempLabel]
+[MeterTempCenterLabel]
 Meter=String
 Text=Temp - Center
 MeterStyle=MeterTextStyle
@@ -250,7 +251,7 @@ X=15
 Y=10R
 StringAlign=Left
 
-[MeterTempDegrees]
+[MeterTempDegreesCenter]
 Meter=String
 MeasureName=MeasureTempDegreesCenter
 MeterStyle=MeterValueTextStyle
@@ -259,7 +260,7 @@ Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesBar]
+[MeterTempDegreesCenterBar]
 Meter=Shape
 X=17
 Y=2R
@@ -267,6 +268,34 @@ Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
 Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
 DynamicVariables=1
+
+
+[MeterTempEdgeLabel]
+Meter=String
+Text=Temp - Edge
+MeterStyle=MeterTextStyle
+X=15
+Y=10R
+StringAlign=Left
+
+[MeterTempDegreesEdge]
+Meter=String
+MeasureName=MeasureTempDegreesEdge
+MeterStyle=MeterValueTextStyle
+X=#ValueX#
+Y=0r
+StringAlign=Right
+Text=%1 #Temperatures#
+
+[MeterTempDegreesEdgeBar]
+Meter=Shape
+X=17
+Y=2R
+Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
+DynamicVariables=1
+
 
 [MeterFanSpeedLabel]
 Meter=String
@@ -304,7 +333,7 @@ StringAlign=Left
 
 [MeterPowerW]
 Meter=String
-MeasureName=MeasureGPUPowerW
+MeasureName=MeasureCPUPowerW
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -316,8 +345,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
+Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
 DynamicVariables=1
 
 [MeterMemoryClockLabel]
@@ -330,7 +359,7 @@ StringAlign=Left
 
 [MeterMemoryClock]
 Meter=String
-MeasureName=MeasureGPUMemoryClock
+MeasureName=MeasureCPUMemoryClock
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -342,8 +371,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
+Shape2=Rectangle 0,0,([MeasureCPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryClock:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
@@ -356,7 +385,7 @@ StringAlign=Left
 
 [MeterMemoryMB]
 Meter=String
-MeasureName=MeasureGPUMemoryMB
+MeasureName=MeasureCPUMemoryMB
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -368,6 +397,6 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
+Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryMB:%])/100)
 DynamicVariables=1
