--- a/HWiNFOcpuNew/HWiNFOcpu.ini
+++ b/HWiNFOcpuNew/HWiNFOcpu.ini
@@ -25,14 +25,13 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 ; Sensor Variables - You will certainly need to change these
 CPUName=1
-CPUTempDegreesCenter=2
-CPUTempDegreesEdge=1
-CPUFanSpeedRPM=3
-CPUCoreClockSpeedMHz=5
+CPUMemoryMB=0
+CPUCoreLoad=1
+CPUCoreClockSpeedMHz=2
+CPUTempDegrees=3
+;CPUFanSpeedRPM=3
 CPUPowerW=4
-CPUCoreLoad=7
-CPUMemoryMB=8
-CPUMemoryClock=6
+;CPUMemoryClock=6
 
 ; Font Variables
 TextFont=Dosis
@@ -79,35 +78,25 @@ UpdateDivider=-1
 RegExpSubstitute=1
 Substitute="^.*]:":"",":":""
 
-[MeasureTempDegreesCenter]
+[MeasureTempDegrees]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegreesCenter#
+RegValue=ValueRaw#CPUTempDegrees#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureTempDegreesEdge]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegreesEdge#
-MinValue=30
-MaxValue=90
-RegExpSubstitute=1
-Substitute="^.*]:":""
-
-[MeasureFanSpeedRPM]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUFanSpeedRPM#
-MinValue=0
-MaxValue=3500
-RegExpSubstitute=1
-Substitute="^.*]:":""
+; [MeasureFanSpeedRPM]
+; Measure=Registry
+; RegHKey=HKEY_CURRENT_USER
+; RegKey=SOFTWARE\HWiNFO32\VSB
+; RegValue=ValueRaw#CPUFanSpeedRPM#
+; MinValue=0
+; MaxValue=3500
+; RegExpSubstitute=1
+; Substitute="^.*]:":""
 
 [MeasureCoreClockSpeedMHz]
 Measure=Registry
@@ -115,7 +104,7 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#CPUCoreClockSpeedMHz#
 MinValue=0
-MaxValue=2700
+MaxValue=4200
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
@@ -139,15 +128,15 @@ MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUMemoryClock]
-Measure=Registry
-RegHKey=HKEY_CURRENT_USER
-RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryClock#
-MinValue=0
-MaxValue=2250
-RegExpSubstitute=1
-Substitute="^.*]:":""
+; [MeasureCPUMemoryClock]
+; Measure=Registry
+; RegHKey=HKEY_CURRENT_USER
+; RegKey=SOFTWARE\HWiNFO32\VSB
+; RegValue=ValueRaw#CPUMemoryClock#
+; MinValue=0
+; MaxValue=2250
+; RegExpSubstitute=1
+; Substitute="^.*]:":""
 
 [MeasureCPUMemoryMB]
 Measure=Registry
@@ -243,9 +232,9 @@ Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),2 | Fill LinearGr
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
-[MeterTempCenterLabel]
+[MeterTempLabel]
 Meter=String
-Text=Temp - Center
+Text=Temp
 MeterStyle=MeterTextStyle
 X=15
 Y=10R
@@ -253,80 +242,26 @@ StringAlign=Left
 
 [MeterTempDegreesCenter]
 Meter=String
-MeasureName=MeasureTempDegreesCenter
+MeasureName=MeasureTempDegrees
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesCenterBar]
+[MeterTempDegreesBar]
 Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
-DynamicVariables=1
-
-
-[MeterTempEdgeLabel]
-Meter=String
-Text=Temp - Edge
-MeterStyle=MeterTextStyle
-X=15
-Y=10R
-StringAlign=Left
-
-[MeterTempDegreesEdge]
-Meter=String
-MeasureName=MeasureTempDegreesEdge
-MeterStyle=MeterValueTextStyle
-X=#ValueX#
-Y=0r
-StringAlign=Right
-Text=%1 #Temperatures#
-
-[MeterTempDegreesEdgeBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
-DynamicVariables=1
-
-
-[MeterFanSpeedLabel]
-Meter=String
-MeterStyle=MeterTextStyle
-Text=Fan Speed
-X=15
-Y=10R
-StringAlign=Left
-
-[MeterFanSpeedRPM]
-Meter=String
-MeasureName=MeasureFanSpeedRPM
-MeterStyle=MeterValueTextStyle
-X=#ValueX#
-Y=0r
-StringAlign=Right
-Text=%1 #FanSpeeds#
-
-[MeterFanSpeedRPMBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 |#G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureFanSpeedRPM:%])/100) | #G3# ; (0.5 + (100-[MeasureFanSpeedRPM:%])/100) | #G4# ; (0.75 + (100-[MeasureFanSpeedRPM:%])/100)
+Shape2=Rectangle 0,0,([MeasureTempDegrees:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegrees:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegrees:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegrees:%])/100)
 DynamicVariables=1
 
 [MeterPowerWLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=TGP
+Text=TCP
 X=15
 Y=10R
 StringAlign=Left
@@ -347,32 +282,6 @@ Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
 Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
-DynamicVariables=1
-
-[MeterMemoryClockLabel]
-Meter=String
-MeterStyle=MeterTextStyle
-Text=Memory Clock
-X=15
-Y=10R
-StringAlign=Left
-
-[MeterMemoryClock]
-Meter=String
-MeasureName=MeasureCPUMemoryClock
-MeterStyle=MeterValueTextStyle
-X=#ValueX#
-Y=0r
-StringAlign=Right
-Text=%1 #ClockSpeeds#
-
-[MeterMemoryClockBar]
-Meter=Shape
-X=17
-Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryClock:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
