--- a/HWiNFOgpuNew/HWiNFOgpu.ini
+++ b/HWiNFOgpuNew/HWiNFOgpu.ini
@@ -3,10 +3,10 @@ Update=2000
 AccurateText=1
 OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
 ContextTitle=Display Sensors
-ContextAction=[!ActivateConfig "HWiNFOCPUNew\ShowReg" "ShowReg.ini"]
+ContextAction=[!ActivateConfig "HWiNFOgpuNew\ShowReg" "ShowReg.ini"]
 
 [Metadata]
-Name=HWiNFOcpu
+Name=HWiNFOgpu
 Author=JSMorley
 Information=Description:|HWInfo Graphics card information | Current settings are for my NVIDIA GeForce RTX 2080-Ti 
 Version=December 7, 2021
@@ -24,15 +24,15 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 ; these Index numbers will change!
 
 ; Sensor Variables - You will certainly need to change these
-CPUName=1
-CPUTempDegreesCenter=2
-CPUTempDegreesEdge=1
-CPUFanSpeedRPM=3
-CPUCoreClockSpeedMHz=5
-CPUPowerW=4
-CPUCoreLoad=7
-CPUMemoryMB=8
-CPUMemoryClock=6
+GPUName=5
+GPUTempDegreesEdge=5
+GPUTempDegreesCenter=6
+GPUFanSpeedRPM=7
+GPUPowerW=8
+GPUCoreClockSpeedMHz=9
+GPUMemoryClock=10
+GPUCoreLoad=11
+GPUMemoryMB=12
 
 ; Font Variables
 TextFont=Dosis
@@ -74,7 +74,7 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color #BackgroundC
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=Sensor#CPUName#
+RegValue=Sensor#GPUName#
 UpdateDivider=-1
 RegExpSubstitute=1
 Substitute="^.*]:":"",":":""
@@ -83,7 +83,7 @@ Substitute="^.*]:":"",":":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegreesCenter#
+RegValue=ValueRaw#GPUTempDegreesCenter#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
@@ -93,7 +93,7 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegreesEdge#
+RegValue=ValueRaw#GPUTempDegreesEdge#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
@@ -103,7 +103,7 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUFanSpeedRPM#
+RegValue=ValueRaw#GPUFanSpeedRPM#
 MinValue=0
 MaxValue=3500
 RegExpSubstitute=1
@@ -113,47 +113,47 @@ Substitute="^.*]:":""
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreClockSpeedMHz#
+RegValue=ValueRaw#GPUCoreClockSpeedMHz#
 MinValue=0
 MaxValue=2700
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUPowerW]
+[MeasureGPUPowerW]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUPowerW#
+RegValue=ValueRaw#GPUPowerW#
 MinValue=0
 MaxValue=230
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUCoreLoad]
+[MeasureGPUCoreLoad]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreLoad#
+RegValue=ValueRaw#GPUCoreLoad#
 MinValue=0
 MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUMemoryClock]
+[MeasureGPUMemoryClock]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryClock#
+RegValue=ValueRaw#GPUMemoryClock#
 MinValue=0
 MaxValue=2250
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUMemoryMB]
+[MeasureGPUMemoryMB]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryMB#
+RegValue=ValueRaw#GPUMemoryMB#
 MinValue=0
 MaxValue=16000
 RegExpSubstitute=1
@@ -201,7 +201,7 @@ StringAlign=Left
 
 [MeterCoreLoad]
 Meter=String
-MeasureName=MeasureCPUCoreLoad
+MeasureName=MeasureGPUCoreLoad
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -213,8 +213,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
 DynamicVariables=1
 
 [MeterCoreClockSpeedLabel]
@@ -333,7 +333,7 @@ StringAlign=Left
 
 [MeterPowerW]
 Meter=String
-MeasureName=MeasureCPUPowerW
+MeasureName=MeasureGPUPowerW
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -345,8 +345,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
 DynamicVariables=1
 
 [MeterMemoryClockLabel]
@@ -359,7 +359,7 @@ StringAlign=Left
 
 [MeterMemoryClock]
 Meter=String
-MeasureName=MeasureCPUMemoryClock
+MeasureName=MeasureGPUMemoryClock
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -371,8 +371,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryClock:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
@@ -385,7 +385,7 @@ StringAlign=Left
 
 [MeterMemoryMB]
 Meter=String
-MeasureName=MeasureCPUMemoryMB
+MeasureName=MeasureGPUMemoryMB
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -397,6 +397,6 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryMB:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
 DynamicVariables=1
