--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -2,11 +2,9 @@
 Update=2000
 AccurateText=1
 OnRefreshAction=[!SnapEdges "0" "#CURRENTCONFIG#"]
-ContextTitle=Display Sensors
-ContextAction=[!ActivateConfig "HWiNFOCPUNew\ShowReg" "ShowReg.ini"]
 
 [Metadata]
-Name=HWiNFOcpu
+Name=HWiNFOgpu
 Author=JSMorley
 Information=Description:|HWInfo Graphics card information | Current settings are for my NVIDIA GeForce RTX 2080-Ti 
 Version=December 7, 2021
@@ -24,14 +22,15 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 ; these Index numbers will change!
 
 ; Sensor Variables - You will certainly need to change these
-CPUName=1
-CPUMemoryMB=0
-CPUCoreLoad=1
-CPUCoreClockSpeedMHz=2
-CPUTempDegrees=3
-;CPUFanSpeedRPM=3
-CPUPowerW=4
-;CPUMemoryClock=6
+GPUName=5
+GPUTempDegreesEdge=5
+GPUTempDegreesCenter=6
+GPUFanSpeedRPM=7
+GPUPowerW=8
+GPUCoreClockSpeedMHz=9
+GPUMemoryClock=10
+GPUCoreLoad=11
+GPUMemoryMB=12
 
 ; Font Variables
 TextFont=Dosis
@@ -73,76 +72,86 @@ Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color #BackgroundC
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=Sensor#CPUName#
+RegValue=Sensor#GPUName#
 UpdateDivider=-1
 RegExpSubstitute=1
 Substitute="^.*]:":"",":":""
 
-[MeasureTempDegrees]
+[MeasureTempDegreesCenter]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUTempDegrees#
+RegValue=ValueRaw#GPUTempDegreesCenter#
 MinValue=30
 MaxValue=90
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-; [MeasureFanSpeedRPM]
-; Measure=Registry
-; RegHKey=HKEY_CURRENT_USER
-; RegKey=SOFTWARE\HWiNFO32\VSB
-; RegValue=ValueRaw#CPUFanSpeedRPM#
-; MinValue=0
-; MaxValue=3500
-; RegExpSubstitute=1
-; Substitute="^.*]:":""
+[MeasureTempDegreesEdge]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO32\VSB
+RegValue=ValueRaw#GPUTempDegreesEdge#
+MinValue=30
+MaxValue=90
+RegExpSubstitute=1
+Substitute="^.*]:":""
+
+[MeasureFanSpeedRPM]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO32\VSB
+RegValue=ValueRaw#GPUFanSpeedRPM#
+MinValue=0
+MaxValue=3500
+RegExpSubstitute=1
+Substitute="^.*]:":""
 
 [MeasureCoreClockSpeedMHz]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreClockSpeedMHz#
+RegValue=ValueRaw#GPUCoreClockSpeedMHz#
 MinValue=0
-MaxValue=4200
+MaxValue=2700
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUPowerW]
+[MeasureGPUPowerW]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUPowerW#
+RegValue=ValueRaw#GPUPowerW#
 MinValue=0
 MaxValue=230
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-[MeasureCPUCoreLoad]
+[MeasureGPUCoreLoad]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUCoreLoad#
+RegValue=ValueRaw#GPUCoreLoad#
 MinValue=0
 MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-; [MeasureCPUMemoryClock]
-; Measure=Registry
-; RegHKey=HKEY_CURRENT_USER
-; RegKey=SOFTWARE\HWiNFO32\VSB
-; RegValue=ValueRaw#CPUMemoryClock#
-; MinValue=0
-; MaxValue=2250
-; RegExpSubstitute=1
-; Substitute="^.*]:":""
-
-[MeasureCPUMemoryMB]
+[MeasureGPUMemoryClock]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
-RegValue=ValueRaw#CPUMemoryMB#
+RegValue=ValueRaw#GPUMemoryClock#
+MinValue=0
+MaxValue=2250
+RegExpSubstitute=1
+Substitute="^.*]:":""
+
+[MeasureGPUMemoryMB]
+Measure=Registry
+RegHKey=HKEY_CURRENT_USER
+RegKey=SOFTWARE\HWiNFO32\VSB
+RegValue=ValueRaw#GPUMemoryMB#
 MinValue=0
 MaxValue=16000
 RegExpSubstitute=1
@@ -190,7 +199,7 @@ StringAlign=Left
 
 [MeterCoreLoad]
 Meter=String
-MeasureName=MeasureCPUCoreLoad
+MeasureName=MeasureGPUCoreLoad
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -202,8 +211,8 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
 DynamicVariables=1
 
 [MeterCoreClockSpeedLabel]
@@ -232,9 +241,9 @@ Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),2 | Fill LinearGr
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
-[MeterTempLabel]
+[MeterTempCenterLabel]
 Meter=String
-Text=Temp
+Text=Temp - Center
 MeterStyle=MeterTextStyle
 X=15
 Y=10R
@@ -242,33 +251,87 @@ StringAlign=Left
 
 [MeterTempDegreesCenter]
 Meter=String
-MeasureName=MeasureTempDegrees
+MeasureName=MeasureTempDegreesCenter
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
 StringAlign=Right
 Text=%1 #Temperatures#
 
-[MeterTempDegreesBar]
+[MeterTempDegreesCenterBar]
 Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegrees:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegrees:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegrees:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegrees:%])/100)
+Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
+DynamicVariables=1
+
+
+[MeterTempEdgeLabel]
+Meter=String
+Text=Temp - Edge
+MeterStyle=MeterTextStyle
+X=15
+Y=10R
+StringAlign=Left
+
+[MeterTempDegreesEdge]
+Meter=String
+MeasureName=MeasureTempDegreesEdge
+MeterStyle=MeterValueTextStyle
+X=#ValueX#
+Y=0r
+StringAlign=Right
+Text=%1 #Temperatures#
+
+[MeterTempDegreesEdgeBar]
+Meter=Shape
+X=17
+Y=2R
+Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
+DynamicVariables=1
+
+
+[MeterFanSpeedLabel]
+Meter=String
+MeterStyle=MeterTextStyle
+Text=Fan Speed
+X=15
+Y=10R
+StringAlign=Left
+
+[MeterFanSpeedRPM]
+Meter=String
+MeasureName=MeasureFanSpeedRPM
+MeterStyle=MeterValueTextStyle
+X=#ValueX#
+Y=0r
+StringAlign=Right
+Text=%1 #FanSpeeds#
+
+[MeterFanSpeedRPMBar]
+Meter=Shape
+X=17
+Y=2R
+Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 |#G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureFanSpeedRPM:%])/100) | #G3# ; (0.5 + (100-[MeasureFanSpeedRPM:%])/100) | #G4# ; (0.75 + (100-[MeasureFanSpeedRPM:%])/100)
 DynamicVariables=1
 
 [MeterPowerWLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=TCP
+Text=TGP
 X=15
 Y=10R
 StringAlign=Left
 
 [MeterPowerW]
 Meter=String
-MeasureName=MeasureCPUPowerW
+MeasureName=MeasureGPUPowerW
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -280,8 +343,34 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
+DynamicVariables=1
+
+[MeterMemoryClockLabel]
+Meter=String
+MeterStyle=MeterTextStyle
+Text=Memory Clock
+X=15
+Y=10R
+StringAlign=Left
+
+[MeterMemoryClock]
+Meter=String
+MeasureName=MeasureGPUMemoryClock
+MeterStyle=MeterValueTextStyle
+X=#ValueX#
+Y=0r
+StringAlign=Right
+Text=%1 #ClockSpeeds#
+
+[MeterMemoryClockBar]
+Meter=Shape
+X=17
+Y=2R
+Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
@@ -294,7 +383,7 @@ StringAlign=Left
 
 [MeterMemoryMB]
 Meter=String
-MeasureName=MeasureCPUMemoryMB
+MeasureName=MeasureGPUMemoryMB
 MeterStyle=MeterValueTextStyle
 X=#ValueX#
 Y=0r
@@ -306,6 +395,6 @@ Meter=Shape
 X=17
 Y=2R
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
-MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryMB:%])/100)
+Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
 DynamicVariables=1
