--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -16,10 +16,7 @@ CPUMemoryMB=0
 CPUCoreClockSpeedMHz=1
 CPUCoreLoad=2
 CPUTempDegrees=3
-;CPUFanSpeedRPM=3
 CPUPowerW=4
-;CPUMemoryClock=6
-
 
 
 ; Font Variables
@@ -28,15 +25,14 @@ TextFont=Dosis
 ; Color Variables
 LabelColor=250,250,250
 ValueColor=255,255,255
-FrameColor=120,120,120,255
+FrameColor=255,0,0,255
 BarBackColor=#LabelColor#,75
 BackgroundAlpha=200
-BackgroundColor=0,0,0,#BackgroundAlpha#
+BackgroundColor=255,0,0,#BackgroundAlpha#
 G1=177, 255, 145,255
 G2=200, 195, 47,255
 G3=214, 125, 0,255
 G4=212, 13, 18,255
-
 
 ;Variable Size
 BackgroundH=230
@@ -54,10 +50,10 @@ Powers=W
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color #BackgroundColor# | StrokeWidth 1.5 | Stroke Color #FrameColor#
+Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill  LinearGradient1 MyGradient | StrokeWidth 1.5 | Stroke Color #FrameColor#
+MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,100 ; 0.4
 
 ; Measures
-
 [MeasureCardName]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -73,19 +69,9 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#CPUTempDegrees#
 MinValue=30
-MaxValue=90
+MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
-
-; [MeasureFanSpeedRPM]
-; Measure=Registry
-; RegHKey=HKEY_CURRENT_USER
-; RegKey=SOFTWARE\HWiNFO32\VSB
-; RegValue=ValueRaw#CPUFanSpeedRPM#
-; MinValue=0
-; MaxValue=3500
-; RegExpSubstitute=1
-; Substitute="^.*]:":""
 
 [MeasureCoreClockSpeedMHz]
 Measure=Registry
@@ -103,7 +89,7 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#CPUPowerW#
 MinValue=0
-MaxValue=230
+MaxValue=65
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
@@ -117,16 +103,6 @@ MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
-; [MeasureCPUMemoryClock]
-; Measure=Registry
-; RegHKey=HKEY_CURRENT_USER
-; RegKey=SOFTWARE\HWiNFO32\VSB
-; RegValue=ValueRaw#CPUMemoryClock#
-; MinValue=0
-; MaxValue=2250
-; RegExpSubstitute=1
-; Substitute="^.*]:":""
-
 [MeasureCPUMemoryMB]
 Measure=Registry
 RegHKey=HKEY_CURRENT_USER
@@ -138,7 +114,6 @@ RegExpSubstitute=1
 Substitute="^.*]:":""
 
 ; Meters
-
 [MeterTextStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
@@ -190,10 +165,10 @@ Text=%1 #Percents#
 Meter=Shape
 X=17
 Y=2R
+DynamicVariables=1
 Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
 Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
-DynamicVariables=1
 
 [MeterCoreClockSpeedLabel]
 Meter=String
