--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -38,7 +38,7 @@ TextFont=Dosis
 ; Color Variables
 LabelColor=250,250,250
 ValueColor=255,255,255
-FrameColor=120,120,120,255
+FrameColor=255,0,0,255
 BarBackColor=#LabelColor#,75
 BackgroundAlpha=200
 BackgroundColor=0,0,0,#BackgroundAlpha#
@@ -64,8 +64,8 @@ Powers=W
 
 [MeterAllBackground]
 Meter=Shape
-Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill Color #BackgroundColor# | StrokeWidth 1.5 | Stroke Color #FrameColor#
-
+Shape=Rectangle 0.5,0.5,#BackgroundW#,#BackgroundH#,12 | Fill  LinearGradient1 MyGradient | StrokeWidth 1.5 | Stroke Color #FrameColor#
+MyGradient=270 | 255, 0, 0,200 ; 0.0 | 231, 76, 60,100 ; 0.4
 ; Measures
 
 [MeasureCardName]
@@ -83,7 +83,7 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#GPUTempDegreesCenter#
 MinValue=30
-MaxValue=90
+MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
@@ -93,7 +93,7 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#GPUTempDegreesEdge#
 MinValue=30
-MaxValue=90
+MaxValue=100
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
@@ -153,7 +153,7 @@ RegHKey=HKEY_CURRENT_USER
 RegKey=SOFTWARE\HWiNFO32\VSB
 RegValue=ValueRaw#GPUMemoryMB#
 MinValue=0
-MaxValue=16000
+MaxValue=12000
 RegExpSubstitute=1
 Substitute="^.*]:":""
 
