added icon, change progressbar design

--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -20,7 +20,7 @@ CPUPowerW=4
 
 
 ; Font Variables
-TextFont=Dosis
+TextFont=Monofur NF
 
 ; Color Variables
 LabelColor=250,250,250
@@ -35,10 +35,13 @@ G3=214, 125, 0,255
 G4=212, 13, 18,255
 
 ;Variable Size
-BackgroundH=230
+BackgroundH=220
 BackgroundW=250
 BarW=(#BackgroundW#-33)
 ValueX=(#BackgroundW#-15)
+Shape1H=1
+Shape2H=5
+Shape2R=3
 
 ; Unit Symbol Variables
 Temperatures=C
@@ -47,6 +50,13 @@ Percents=%
 ClockSpeeds=MHz
 Memories=MB
 Powers=W
+
+Load=[\xf085]
+Clock=[\xf9c4]
+Temp=[\xfa0e]
+Memory=[\xf85a]
+Fan=[\xf70f]
+Power=[\xe315]
 
 [MeterAllBackground]
 Meter=Shape
@@ -147,7 +157,7 @@ StringAlign=Center
 [MeterCoreLoadLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Load
+Text=#Load#  Load
 X=15
 Y=10R
 StringAlign=Left
@@ -166,14 +176,14 @@ Meter=Shape
 X=17
 Y=2R
 DynamicVariables=1
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureCPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUCoreLoad:%])/100)
 
 [MeterCoreClockSpeedLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Clock
+Text=#Clock#  Clock
 X=15
 Y=10R
 StringAlign=Left
@@ -191,14 +201,14 @@ Text=%1 #ClockSpeeds#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
 [MeterTempLabel]
 Meter=String
-Text=Temp
+Text=#Temp#  Temp
 MeterStyle=MeterTextStyle
 X=15
 Y=10R
@@ -217,15 +227,15 @@ Text=%1 #Temperatures#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegrees:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegrees:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegrees:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegrees:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegrees:%])/100)
 DynamicVariables=1
 
 [MeterPowerWLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=TCP
+Text=#Power#  TCP
 X=15
 Y=10R
 StringAlign=Left
@@ -243,15 +253,15 @@ Text=%1 #Powers#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUPowerW:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Memory Usage
+Text=#Memory#  Memory Usage
 X=15
 Y=10R
 StringAlign=Left
@@ -269,7 +279,7 @@ Text=%1 #Memories#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureCPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureCPUMemoryMB:%])/100)
 DynamicVariables=1
