--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -33,7 +33,7 @@ GPUCoreLoad=11
 GPUMemoryMB=12
 
 ; Font Variables
-TextFont=Dosis
+TextFont=Monofur NF
 
 ; Color Variables
 LabelColor=250,250,250
@@ -53,6 +53,10 @@ BackgroundH=330
 BackgroundW=250
 BarW=(#BackgroundW#-33)
 ValueX=(#BackgroundW#-15)
+Shape1H=1
+Shape2H=5
+Shape2R=3
+
 
 ; Unit Symbol Variables
 Temperatures=C
@@ -61,6 +65,13 @@ Percents=%
 ClockSpeeds=MHz
 Memories=MB
 Powers=W
+
+Load=[\xf085]
+Clock=[\xf9c4]
+Temp=[\xfa0e]
+Memory=[\xf85a]
+Fan=[\xf70f]
+Power=[\xe315]
 
 [MeterAllBackground]
 Meter=Shape
@@ -192,7 +203,7 @@ StringAlign=Center
 [MeterCoreLoadLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Load
+Text=#Load#  Load
 X=15
 Y=10R
 StringAlign=Left
@@ -210,15 +221,15 @@ Text=%1 #Percents#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUCoreLoad:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUCoreLoad:%])/100)| #G3# ; (0.5 + (100-[MeasureGPUCoreLoad:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUCoreLoad:%])/100)
 DynamicVariables=1
 
 [MeterCoreClockSpeedLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Clock
+Text=#Clock#  Clock
 X=15
 Y=10R
 StringAlign=Left
@@ -236,14 +247,14 @@ Text=%1 #ClockSpeeds#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureCoreClockSpeedMHz:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G3# ; (0.5 + (100-[MeasureCoreClockSpeedMHz:%])/100) | #G4# ; (0.75 + (100-[MeasureCoreClockSpeedMHz:%])/100)
 DynamicVariables=1
 
 [MeterTempCenterLabel]
 Meter=String
-Text=Temp - Center
+Text=#Temp#  Temp - Center
 MeterStyle=MeterTextStyle
 X=15
 Y=10R
@@ -262,15 +273,15 @@ Text=%1 #Temperatures#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesCenter:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesCenter:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesCenter:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesCenter:%])/100)
 DynamicVariables=1
 
 
 [MeterTempEdgeLabel]
 Meter=String
-Text=Temp - Edge
+Text=#Temp#  Temp - Edge
 MeterStyle=MeterTextStyle
 X=15
 Y=10R
@@ -289,8 +300,8 @@ Text=%1 #Temperatures#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureTempDegreesEdge:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureTempDegreesEdge:%])/100) | #G3# ; (0.5 + (100-[MeasureTempDegreesEdge:%])/100) | #G4# ; (0.75 + (100-[MeasureTempDegreesEdge:%])/100)
 DynamicVariables=1
 
@@ -298,7 +309,7 @@ DynamicVariables=1
 [MeterFanSpeedLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Fan Speed
+Text=#Fan#  Fan Speed
 X=15
 Y=10R
 StringAlign=Left
@@ -316,15 +327,15 @@ Text=%1 #FanSpeeds#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureFanSpeedRPM:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 |#G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureFanSpeedRPM:%])/100) | #G3# ; (0.5 + (100-[MeasureFanSpeedRPM:%])/100) | #G4# ; (0.75 + (100-[MeasureFanSpeedRPM:%])/100)
 DynamicVariables=1
 
 [MeterPowerWLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=TGP
+Text=#Power#  TGP
 X=15
 Y=10R
 StringAlign=Left
@@ -342,15 +353,15 @@ Text=%1 #Powers#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUPowerW:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUPowerW:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUPowerW:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUPowerW:%])/100)
 DynamicVariables=1
 
 [MeterMemoryClockLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Memory Clock
+Text=#Memory#  Memory Clock
 X=15
 Y=10R
 StringAlign=Left
@@ -368,15 +379,15 @@ Text=%1 #ClockSpeeds#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUMemoryClock:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryClock:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryClock:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryClock:%])/100)
 DynamicVariables=1
 
 [MeterMemoryMBLabel]
 Meter=String
 MeterStyle=MeterTextStyle
-Text=Memory Usage
+Text=#Memory#  Memory Usage
 X=15
 Y=10R
 StringAlign=Left
@@ -394,7 +405,7 @@ Text=%1 #Memories#
 Meter=Shape
 X=17
 Y=2R
-Shape=Rectangle 0,0,#BarW#,2 |  Fill Color #BarBackColor# | StrokeWidth 0
-Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),2 | Fill LinearGradient1 MyGradient | StrokeWidth 0
+Shape=Rectangle 0,2,#BarW#,#Shape1H# |  Fill Color #BarBackColor# | StrokeWidth 0
+Shape2=Rectangle 0,0,([MeasureGPUMemoryMB:%]*#BarW#/100),#Shape2H#,#Shape2R# | Fill LinearGradient1 MyGradient | StrokeWidth 0
 MyGradient=180 | #G1# ; 0.0 | #G2# ; (0.25 + (100-[MeasureGPUMemoryMB:%])/100) | #G3# ; (0.5 + (100-[MeasureGPUMemoryMB:%])/100) | #G4# ; (0.75 + (100-[MeasureGPUMemoryMB:%])/100)
 DynamicVariables=1
