--- a/HWiNFOcpu/HWiNFOcpu.ini
+++ b/HWiNFOcpu/HWiNFOcpu.ini
@@ -20,7 +20,7 @@ CPUPowerW=4
 
 
 ; Font Variables
-TextFont=Monofur NF
+TextFont=VictorMono NF
 
 ; Color Variables
 LabelColor=250,250,250
@@ -127,7 +127,7 @@ Substitute="^.*]:":""
 [MeterTextStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
-FontSize=11
+FontSize=10
 ;StringStyle=Bold
 FontWeight=400
 AntiAlias=1
@@ -136,7 +136,7 @@ NumOfDecimals=0
 [MeterValueTextStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
-FontSize=12
+FontSize=10
 ;StringStyle=Bold
 FontWeight=900
 AntiAlias=1
