--- a/HWiNFOgpu/HWiNFOgpu.ini
+++ b/HWiNFOgpu/HWiNFOgpu.ini
@@ -33,7 +33,7 @@ GPUCoreLoad=11
 GPUMemoryMB=12
 
 ; Font Variables
-TextFont=Monofur NF
+TextFont=VictorMono NF
 
 ; Color Variables
 LabelColor=250,250,250
@@ -49,7 +49,7 @@ G4=212, 13, 18,255
 
 
 ;Variable Size
-BackgroundH=330
+BackgroundH=340
 BackgroundW=250
 BarW=(#BackgroundW#-33)
 ValueX=(#BackgroundW#-15)
@@ -173,7 +173,7 @@ Substitute="^.*]:":""
 [MeterTextStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
-FontSize=11
+FontSize=10
 ;StringStyle=Bold
 FontWeight=400
 AntiAlias=1
@@ -182,7 +182,7 @@ NumOfDecimals=0
 [MeterValueTextStyle]
 FontFace=#TextFont#
 FontColor=#ValueColor#
-FontSize=12
+FontSize=10
 ;StringStyle=Bold
 FontWeight=900
 AntiAlias=1
